k8s/media/drive/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: media
  labels: 
    app: drive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drive
  template:
    metadata:
      labels:
        app: drive
    spec:
      containers:
      - name: nextcloud
        image: ghcr.io/linuxserver/nextcloud
        imagePullPolicy: Always
        ports:
          - containerPort: 443
            name: "https"
        volumeMounts:
          - mountPath: "/data"
            name: drive-data-volume
          - mountPath: "/config"
            name: nextcloud-config-volume
      volumes:
      - name: drive-data-volume
        persistentVolumeClaim:
          claimName: drive-data-claim
      - name: nextcloud-config-volume
        persistentVolumeClaim:
          claimName: nextcloud-config-claim
      securityContext:
        fsGroup: 1000
