k8s/media/drive/drive-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: drive
  name: drive
  namespace: media
spec:
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: drive
