k8s/media/drive/drive-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drive-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
      - drive.s.fnptr.net
    secretName: drive-cert
  rules:
  - host: drive.s.fnptr.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drive
            port:
              number: 443
